--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "@mui/x-data-grid": "^6.18.7",
     "@mui/x-date-pickers": "^6.18.7",
     "date-fns": "^2.30.0",
+    "html2canvas": "^1.4.1",
+    "html5-qrcode": "^2.3.8",
+    "jspdf": "^3.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
+    "@types/jspdf": "^1.3.3",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -36,6 +40,3 @@
     "vite": "^5.0.8"
   }
 }
-
-
-
