--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@mui/x-charts": "^6.18.7",
     "@mui/x-data-grid": "^6.18.7",
     "@mui/x-date-pickers": "^6.18.7",
+    "@types/jszip": "^3.4.0",
     "date-fns": "^2.30.0",
     "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
     "jspdf": "^3.0.4",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1"
