--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
+  base = "tove-leads-web"
   command = "npm run build"
-  publish = "dist"
+  publish = "tove-leads-web/dist"
 
 [[redirects]]
   from = "/*"
